k8s/applications/transmission/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:3.6
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: server
              mountPath: /data/transmission-home
              subPath: transmission
            - name: media
              mountPath: /data
              subPath: Transmission
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 0.5
              memory: 512Mi
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: media
          persistentVolumeClaim:
            claimName: media
