k8s/applications/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  ports:
    - name: transmission
      port: 9091
      targetPort: http
